# Marky

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: file_ops.rs
src/components/AiPanel/: AiPanel.tsx  InlineAiMenu.tsx  QuickActionsToolbar.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/Editor/: MarkdownEditor.tsx
src/components/Preview/: Preview.tsx
src/components/Settings/: SettingsModal.tsx
src/components/Sidebar/: FileSidebar.tsx  TocSidebar.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/TitleBar/: TitleBar.tsx
src/components/ui/: primitives.tsx
src/hooks/: useAi.ts  usePersistence.ts
src/lib/: ai-engine.ts  markdown-parser.ts  platform.ts  themes.ts  utils.ts
src/lib/ai-agent/: agent.ts  tools.ts
src/lib/ai-providers/: anthropic.ts  defaults.ts  google.ts  index.ts  ollama.ts  openai-compatible.ts  transport.ts
src/stores/: aiStore.ts  fileStore.ts  settingsStore.ts  themeStore.ts
src/styles/: globals.css
src/styles/themes/: cyberpunk.css  midnight.css  obsidian.css  paper.css  solarized.css
